# particle-picker

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
docs/: README.md  app.js  index.html  parser.js
particle_picker/analysis/: statistics.py
particle_picker/cli/: particle_cli.py
particle_picker/dashboard/: app.py
particle_picker/parsers/: box_parser.py  csv_parser.py  star_parser.py
particle_picker/visualization/: plots.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_box_parser.py  test_csv_parser.py  test_star_parser.py  test_statistics.py
